[package]
name = "durak_rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "durak_rt"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = ["python"]
python = ["pyo3", "numpy"]

[dependencies]
queues = "1.0.2"
rand = "0.8.5"
rayon = "1.9.0"
pyo3 = { version = "0.20.0", optional = true }
numpy = { version = "0.20", optional = true }
rand_chacha = "0.3.1"
ndarray = "0.15"
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
